# uniLabWork

./: .gitignore  IoT  README.md
ImageProcessing/lab1/: part1.py  part2.py
IoT/anchiale/: README.md
MultiComms_lab/: .project  pom.xml
android/androidLab2/: settings.gradle
android/androidLab3/: settings.gradle
androidLab3/app/: build.gradle
c/distributed_systems_lab01/: .cproject  .project
compilers/: README.md
compilers/1-fsm-source/: comments.fsm  float.fsm  fsm  fullAuto.fsm  integers.fsm  names.fsm  strings.fsm
compilers/2-flex/: Makefile  Our_output.txt  flex-code.l  input.txt  token.h
compilers/3-bison/: output.txt  simple-bison-code  simple-bison-code.c  simple-bison-code.y
compilers/4-flex+bison/: Makefile  uni-c  uni-c.l  uni-c.y
cpp/cpp_june_01/: CMakeLists.txt  employee.cpp  employee.h  main.cpp  manager.cpp  manager.h  salaried.cpp  salaried.h  seasonal.cpp  seasonal.h
cpp/cpp_june_02/: CMakeLists.txt  client.cpp  client.h  clientList.cpp  clientList.h  doctor.cpp  doctor.h  doctorList.cpp  doctorList.h  main.cpp
cpp/cpp_june_03/: CMakeLists.txt  book.cpp  book.h  bookstoreItem.cpp  bookstoreItem.h  main.cpp  scItem.cpp  scItem.h  warehouse.cpp  warehouse.h
cpp/cpp_june_04/: CMakeLists.txt  FIFOQueue.cpp  FIFOQueue.h  checkIn.cpp  checkIn.h  checkOut.cpp  checkOut.h  main.cpp  room.cpp  (+5 more)
docker/: Makefile  docker-compose.yml  package.json
multiComms/: MultiComms_lab.eml  MultiComms_lab.userlibraries
multimediaCommunications/: .classpath
parallelSystems/parSys01/: CMakeLists.txt  largeMatrices.c  largeMatrices.h  main.c
(+232 files in other folders)
